# bind-dyndb-ldap

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  NEWS  README  README.md  cache.c  cache.h  configure.ac  ldap_convert.c  ldap_convert.h  ldap_driver.c  ldap_helper.c  ldap_helper.h  log.c  log.h  rdlist.c  rdlist.h  semaphore.c  semaphore.h  settings.c  settings.h  str.c  str.h  util.h  zone_manager.c  zone_manager.h
contrib/: bind-dyndb-ldap.spec
contrib/gdb_extensions/: README  ldap_attribute.py  ldap_entry.py  ldap_valuelist.py
doc/: Makefile.am  example.ldif  schema  schema.ldif
releng/: README  bumpver.py  srcversion.py  trac.py  tracvers.py
src/: Makefile.am  acl.c  acl.h  bindcfg.c  bindcfg.h  cache.c  cache.h  compat.h  empty_zones.c  empty_zones.h  fs.c  fs.h  fwd.c  fwd.h  fwd_register.c  fwd_register.h  krb5_helper.c  krb5_helper.h  ldap_convert.c  ldap_convert.h  ldap_driver.c  ldap_driver.h  ldap_entry.c  ldap_entry.h  ldap_helper.c  ldap_helper.h  lock.c  lock.h  log.c  log.h  metadb.c  metadb.h  mldap.c  mldap.h  rbt_helper.c  rbt_helper.h  rdlist.c  rdlist.h  semaphore.c  semaphore.h  (+16 more)
tests/azure/: azure-pipelines.yml
tests/azure/Dockerfiles/: Dockerfile.build.fedora  docker-compose.yml
tests/azure/azure_definitions/: gating-fedora.yml
tests/azure/scripts/: azure-run-integration-tests.sh  azure-run-tests.sh  dump_cores.sh  generate-matrix.py  install-debuginfo-fedora.sh  install-debuginfo.sh  setup_containers.py  variables.sh
tests/azure/templates/: build-fedora.yml  generate-job-variables.yml  generate-matrix.yml  prepare-build-fedora.yml  run-test.yml  save-test-artifacts.yml  setup-test-environment.yml  test-jobs.yml  variables-common.yml  variables-fedora.yml
